--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,23 +65,18 @@ POSTS
 	padding-top: 2rem;
 }
 article {
-	/*box-shadow: 0px 3px 30px -20px #505050;*/
 	box-shadow: 0px 3px 15px -10px #505050;
 	padding: 20px 20px 50px 20px;
 	margin-bottom: 1.5rem;
 	border-radius: 20px;
 	box-sizing: border-box;
 	display: inline-block;
-	height: auto;
-	overflow: hidden;
-	transition: all ease 1s; /* toggle */
 }
 .post-title {
 	font-family: 'Roboto Mono', monospace;
 	text-transform: uppercase;
 	font-size: 1.3rem;
 	font-weight: 300;
-	/*font-style: italic;*/
 }
 .post-content {
 	font-family: 'Open Sans', sans-serif;
@@ -146,6 +141,33 @@ COMMENTS
 hr {
 	height: 0.5px;
 	background: #cbcbcb;
-	/*font-size: 0;*/
 	border: 0;
+}
+
+
+/*
+-------------------------------------
+MEDIA QUERIES
+-------------------------------------
+*/
+
+@media only screen and (max-width: 700px) {
+	.posts-container {
+		-webkit-column-count: 1;
+		        column-count: 1;
+	}
+	article {
+		display: block;
+	}
+}
+
+@media only screen and (max-width: 480px) {
+	.header {
+		height: 8rem;
+	}
+	.posts-container {
+		padding-top: 3rem;
+		-webkit-column-count: 1;
+		        column-count: 1;
+	}
 }
